@@ -6,7 +6,8 @@
 	"description": "Modifies vanilla crafting and smelting to be much trickier, you will need better planning and more clever setup",
 	"dependencies": [
 		"base >= 1.1.24",
-		"? railloader"
+		"? railloader",
+		"? railloader-MXO"
 	],
 	"homepage": "https://forums.factorio.com/viewtopic.php?f=91&t=30493",
 	"factorio_version": "1.1"
