@@ -1,0 +1,3 @@
+local railloader = require "interfaces.railloader"
+railloader.AddBulkItems()
+
