@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.9
-Date: ????
+Date: 2023-12-06
   Changes:
+    - Interface handling for railloader and railloader-MXO improved
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.8
 Date: 2023-12-05
